# CSAM-Prevention

./: .coverage  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_USAGE.md  BRANCH_CONSOLIDATION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  GOVERNANCE.md  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  SECURITY.md  SUPPORT.md  WARP.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PROJECT_STATUS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  lint.yml  release.yml  scorecard.yml  security.yml
agent-persona-pack/: README.md
agent-persona-pack/jules/: JULES.md
agent-persona-pack/personas/: infra-devops-agent.md  issue-summarizer-roadmap.md  pr-reviewer.md
agent-persona-pack/runner/: agent_runner_example.json
agent-persona-pack/sop/: AGENT_SOP.md
charts/csam-guard/: Chart.yaml
config/: default.yaml  schema.json
csam-guard/data/: known_hashes.json
csam-guard/docker/: Dockerfile.api
csam-guard/k8s/: configmap.yaml  (+3 more)
docs/: ABOUT.md  API.md  ARCHITECTURE.md  BUG_REPORT.md  COMPREHENSIVE_IMPROVEMENTS.md  OPERATIONS.md  QUICKSTART.md
grafana/: dashboard.json
k8s/: hpa.yaml
legal/: LICENSE  NOTICE.md  PRIVACY.md  TERMS.md
rules/: RULES.json
tests/: conftest.py  test_api.py  test_app.py  test_bug_context_score.py  test_bug_fixes.py  test_bug_phash.py  test_bug_rss_expiry.py  test_case_sensitivity_docs.py  test_guard_extended.py  test_image.py  test_text.py
(+22 files in other folders)
