[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csam-guard"
version = "14.1.0"
description = "Content safety guard for preventing and detecting child-safety risk signals in text and images."
readme = "README.md"
requires-python = ">=3.10"
license = {text="MIT"}
authors = [{name="CSAM Guard Maintainers", email="maintainers@example.org"}]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "prometheus_client>=0.20",
  "Pillow>=10.2",
  "numpy>=1.26",
  "scipy>=1.11",
  "requests>=2.31",
  "feedparser>=6.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# heavy; optional because we made it lazy
nlp = ["transformers>=4.40,<5"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "httpx>=0.27",
  "types-requests",
  "scipy-stubs",
]

[project.urls]
Homepage = "https://example.org/csam-guard"

[tool.setuptools]
packages = ["csam_guard"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
